[Gradle Jdk Automanagement] Generate Gradle Jdks Configuration & setup Intellij  (#360)
[Gradle Jdk Automanagement] Generate Gradle Jdks Configuration